# banking_pet

./: .gitignore  README.md  pyproject.toml
src/api/: api.py
src/api/clients/: schemas.py  views.py
src/banking/: settings.py  urls.py
src/clients/: admin.py  constants.py  forms.py  models.py  shortcuts.py  validators.py
src/clients/migrations/: 0001_initial.py
src/clients/templates/: payment_form.html
tests/: conftest.py
tests/unit/clients/: test_clients.py
